--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Instagram Log in form design</title>
+  <title>Instagram Log in</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -15,8 +15,8 @@
     <div class="page">
       <div class="title">instagram</div>
       <form>
-        <input type="text" placeholder="Phone number, username, or email">
-        <input type="password" placeholder="Password">
+        <input type="text" placeholder="Phone number, username, or email" name="username">
+        <input type="password" placeholder="Password" name="password">
         <button>Log in</button>
         <div class="option">OR</div>
       </form>
