--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 				<div class="input_field">
 					<input type="password" placeholder="Password" class="input" name="password">
 				</div>
-				<div class="btn"><a href="#">Log In</a></div>
+		        <button style="background-color: #3897f0; width: 250px; height: 30px; border: 1px solid #3897f0 ;">log in</button>
+                
 			</div>
 
         </form>
